# songs-api

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  runserver.py  wsgi.py
scripts/: import_songs.py  run.py
songs_api/: config.py  main.py
songs_api/api/: health.py  ratings.py  songs.py
songs_api/db/: client.py  init_db.py
songs_api/db/models/: rating.py  song.py
songs_api/db/repositories/: rating_repository.py  song_repository.py
songs_api/exceptions/: custom.py  handlers.py
songs_api/schemas/api/: rating.py  song.py
songs_api/schemas/entities/: rating.py  song.py
songs_api/services/: rating_service.py  song_service.py
songs_api/utils/: pagination.py
tests/: conftest.py
tests/api/: test_songs.py
tests/db/repositories/: test_rating_repository.py  test_song_repository.py
tests/services/: test_rating_service.py  test_song_service.py
